common/sysutils.h
@@ -67,6 +67,10 @@ int  gnupg_setenv (const char *name, const char *value, int overwrite);
 int  gnupg_unsetenv (const char *name);
 char *gnupg_getcwd (void);
 
+gpg_error_t gnupg_inotify_watch_socket (int *r_fd, const char *socket_name);
+int gnupg_inotify_has_name (int fd, const char *name);
+
+
 #ifdef HAVE_W32_SYSTEM
 void *w32_get_user_sid (void);
 
